--- a/OpenCV_CS/packages.config
+++ b/OpenCV_CS/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="OpenCvSharp3-AnyCPU" version="4.0.0.20181129" targetFramework="net45" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net45" />
+  <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net45" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net45" />
+  <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net45" />
+  <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net45" />
 </packages>
